--- a/index.html
+++ b/index.html
@@ -330,13 +330,15 @@
             <div class="event__in">
               <input class="event_input" type="text" name="Name" id="" placeholder="Event Name">
             </div>
-          </div>
-          <div class="input__event__search__main">
             <div class="event__search">Category</div>
             <div class="event__in">
               <input class="event_input" type="text" name="Name" id="" placeholder="Category Name">
             </div>
+            <button class="event__button__view">View All</button>
+            <button class="event__button__submit">Submit</button>
+          
           </div>
+          
         </div>
       </div>
     </div>
@@ -392,6 +394,11 @@
         </div>
       </div>
       <button class="more__new__button">MORE NEWS</button>
+      <div class="placement__two">
+        <div class="placement__two__heading">
+          Ad placement
+        </div>
+      </div>
     </div>
 
   </section>
