--- a/index.html
+++ b/index.html
@@ -459,12 +459,63 @@
         <button class="bestkids__button">View Details</button>
       </div>
       <div class="best__right">
+        <div class="span__and__Artical__heading">
         <div class="spanline__bestartical">
           <img src="./image/articalspan.png" alt="">
         </div>
         <div class="bestartical_heading">Popular Articles</div>
       </div>
-      
+   
+      <div class="artical_imgs__all">
+        <div class="artical__con">
+        <div class="artical__img">
+          <img src="./image/artical1.png" alt="">
+        </div>
+        <div class="artical__heading">Wills and Inheritance
+          in Qatar</div>
+      </div>
+        <div class="artical__con">
+        <div class="artical__img">
+          <img src="./image/artical2.png" alt="">
+        </div>
+        <div class="artical__heading">Wills and Inheritance
+          in Qatar</div>
+      </div>
+        <div class="artical__con">
+        <div class="artical__img">
+          <img src="./image/artical3.png" alt="">
+        </div>
+        <div class="artical__heading">Wills and Inheritance
+          in Qatar</div>
+      </div>
+    </div>
+    <div class="doha__img">
+      <img src="./image/dohabook.png" alt="">
+      <div class="doha__heading__links">
+      <div class="dohabook__heading">Doha
+        Magazine</div>
+        <div class="dohabook__link">
+          <a class="doha__link" href="#"> Current Issue</a> <br>
+          <a  class="doha__link" href="#"> Archive</a> <br>
+          <a  class="doha__link" href="#"> Find a copy</a> <br>
+          <a  class="doha__link" href="#"> Subscribe</a> <br>
+        </div>
+        <div class="dohabook__link__imgs__all">
+          <div class="dohabook__linkimg">
+          <img src="./image/dohabook_link1.png" alt="">
+          </div>
+          <div class="dohabook__linkimg">
+          <img src="./image/dohabook_link2.png" alt="">
+          </div>
+          <div class="dohabook__linkimg">
+          <img src="./image/dohabook_link3.png" alt="">
+          </div>
+        </div>
+      </div>
+       
+    </div>
+
+    </div>
 
     </section>
   </div>
