Things of seection

--- a/index.html
+++ b/index.html
@@ -460,62 +460,108 @@
       </div>
       <div class="best__right">
         <div class="span__and__Artical__heading">
-        <div class="spanline__bestartical">
-          <img src="./image/articalspan.png" alt="">
-        </div>
-        <div class="bestartical_heading">Popular Articles</div>
-      </div>
-   
-      <div class="artical_imgs__all">
-        <div class="artical__con">
-        <div class="artical__img">
-          <img src="./image/artical1.png" alt="">
-        </div>
-        <div class="artical__heading">Wills and Inheritance
-          in Qatar</div>
-      </div>
-        <div class="artical__con">
-        <div class="artical__img">
-          <img src="./image/artical2.png" alt="">
-        </div>
-        <div class="artical__heading">Wills and Inheritance
-          in Qatar</div>
-      </div>
-        <div class="artical__con">
-        <div class="artical__img">
-          <img src="./image/artical3.png" alt="">
-        </div>
-        <div class="artical__heading">Wills and Inheritance
-          in Qatar</div>
-      </div>
-    </div>
-    <div class="doha__img">
-      <img src="./image/dohabook.png" alt="">
-      <div class="doha__heading__links">
-      <div class="dohabook__heading">Doha
-        Magazine</div>
-        <div class="dohabook__link">
-          <a class="doha__link" href="#"> Current Issue</a> <br>
-          <a  class="doha__link" href="#"> Archive</a> <br>
-          <a  class="doha__link" href="#"> Find a copy</a> <br>
-          <a  class="doha__link" href="#"> Subscribe</a> <br>
-        </div>
-        <div class="dohabook__link__imgs__all">
-          <div class="dohabook__linkimg">
-          <img src="./image/dohabook_link1.png" alt="">
+          <div class="spanline__bestartical">
+            <img src="./image/articalspan.png" alt="">
           </div>
-          <div class="dohabook__linkimg">
-          <img src="./image/dohabook_link2.png" alt="">
-          </div>
-          <div class="dohabook__linkimg">
-          <img src="./image/dohabook_link3.png" alt="">
-          </div>
+          <div class="bestartical_heading">Popular Articles</div>
         </div>
-      </div>
-       
-    </div>
 
-    </div>
+        <div class="artical_imgs__all">
+          <div class="artical__con">
+            <div class="artical__img">
+              <img src="./image/artical1.png" alt="">
+            </div>
+            <div class="artical__heading">Wills and Inheritance
+              in Qatar</div>
+          </div>
+          <div class="artical__con">
+            <div class="artical__img">
+              <img src="./image/artical2.png" alt="">
+            </div>
+            <div class="artical__heading">Wills and Inheritance
+              in Qatar</div>
+          </div>
+          <div class="artical__con">
+            <div class="artical__img">
+              <img src="./image/artical3.png" alt="">
+            </div>
+            <div class="artical__heading">Wills and Inheritance
+              in Qatar</div>
+          </div>
+        </div>
+        <div class="doha__img">
+          <img src="./image/dohabook.png" alt="">
+          <div class="doha__heading__links">
+            <div class="dohabook__heading">Doha
+              Magazine</div>
+            <div class="dohabook__link">
+              <a class="doha__link" href="#"> Current Issue</a> <br>
+              <a class="doha__link" href="#"> Archive</a> <br>
+              <a class="doha__link" href="#"> Find a copy</a> <br>
+              <a class="doha__link" href="#"> Subscribe</a> <br>
+            </div>
+            <div class="dohabook__link__imgs__all">
+              <div class="dohabook__linkimg">
+                <img src="./image/dohabook_link1.png" alt="">
+              </div>
+              <div class="dohabook__linkimg">
+                <img src="./image/dohabook_link2.png" alt="">
+              </div>
+              <div class="dohabook__linkimg">
+                <img src="./image/dohabook_link3.png" alt="">
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+    </section>
+    <section class="Things">
+      <div class="things__span___and__heading">
+        <div class="things__span">
+          <img src="./image/thingspan.png" alt="">
+        </div>
+        <div class="things__heading">Things to Do</div>
+      </div>
+      <div class="thing__All__pic">
+        <div class="two__img__things">
+        <div class="thing__con">
+          <div class="thing__pic">
+            <img src="./image/thingpic1.png" alt="">
+          </div>
+          <div class="thing__pic__heading">
+         Guide toGiving Birth in Qatar
+          </div>
+        </div>
+        <div class="thing__con">
+          <div class="thing__pic">
+            <img src="./image/thingpic2.png" alt="">
+          </div>
+          <div class="thing__pic__heading">
+            Let It Grow: Gardening in Doha
+          </div>
+        </div></div>
+        <div class="two__img__things">
+        <div class="thing__con">
+          <div class="thing__pic">
+            <img src="./image/thingpic.png" alt="">
+          </div>
+          <div class="thing__pic__heading">
+            Recycling Recycling in Qatar
+          </div>
+        </div>
+        <div class="thing__con">
+          <div class="thing__pic">
+            <img src="./image/thingpic4.png" alt="">
+          </div>
+          <div class="thing__pic__heading">
+            Wills and Inheritance in Qatar
+          </div>
+        </div>
+      </div>
+      </div>
 
     </section>
   </div>
