Done All with responsive

--- a/index.html
+++ b/index.html
@@ -527,44 +527,102 @@
       </div>
       <div class="thing__All__pic">
         <div class="two__img__things">
-        <div class="thing__con">
-          <div class="thing__pic">
-            <img src="./image/thingpic1.png" alt="">
+          <div class="thing__con">
+            <div class="thing__pic">
+              <img src="./image/thingpic1.png" alt="">
+            </div>
+            <div class="thing__pic__heading">
+              Guide toGiving Birth in Qatar
+            </div>
           </div>
-          <div class="thing__pic__heading">
-         Guide toGiving Birth in Qatar
+          <div class="thing__con">
+            <div class="thing__pic">
+              <img src="./image/thingpic2.png" alt="">
+            </div>
+            <div class="thing__pic__heading">
+              Let It Grow: Gardening in Doha
+            </div>
           </div>
         </div>
-        <div class="thing__con">
-          <div class="thing__pic">
-            <img src="./image/thingpic2.png" alt="">
-          </div>
-          <div class="thing__pic__heading">
-            Let It Grow: Gardening in Doha
-          </div>
-        </div></div>
         <div class="two__img__things">
-        <div class="thing__con">
-          <div class="thing__pic">
-            <img src="./image/thingpic.png" alt="">
+          <div class="thing__con">
+            <div class="thing__pic">
+              <img src="./image/thingpic.png" alt="">
+            </div>
+            <div class="thing__pic__heading">
+              Recycling Recycling in Qatar
+            </div>
           </div>
-          <div class="thing__pic__heading">
-            Recycling Recycling in Qatar
+          <div class="thing__con">
+            <div class="thing__pic">
+              <img src="./image/thingpic4.png" alt="">
+            </div>
+            <div class="thing__pic__heading">
+              Wills and Inheritance in Qatar
+            </div>
           </div>
         </div>
-        <div class="thing__con">
-          <div class="thing__pic">
-            <img src="./image/thingpic4.png" alt="">
-          </div>
-          <div class="thing__pic__heading">
-            Wills and Inheritance in Qatar
-          </div>
+      </div>
+
+    </section>
+    <section class="footer">
+      <div class="footer__left">
+        <div class="footer__left__heading">
+          ABOUT US
         </div>
+        <div class="footer__left__para">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet harum eligendi debitis animi in iste porro quo
+          voluptatum voluptates id veniam eum expedita reprehenderit illum fugiat sed quis, laborum necessitatibus.
+        </div>
+
+        <div class="footer__left__sociallinks">
+          <img class="Footer__img__link" src="./image/footersocial__links (1).png" alt="">
+          <img class="Footer__img__link" src="./image/footersocial__links (2).png" alt="">
+          <img class="Footer__img__link" src="./image/footersocial__links (3).png" alt="">
+          <img class="Footer__img__link" src="./image/footersocial__links (4).png" alt="">
+          <img class="Footer__img__link" src="./image/footersocial__links (5).png" alt="">
+        </div>
+        <div class="footer__img__baner">
+          <img class="img__ban" src="./image/footer__baner.png" alt="">
+        </div>
+      </div>
+      <div class="footer__mid">
+        <div class="footer__mid__heading">
+          POPULAR POST
+        </div>
+        <div class="footer__mid__img__and__para">
+          <div class="footer__mid__post__img">
+            <img src="./image/news1.png" alt="">
+          </div>
+          <div class="footer__mid__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium rerum
+            soluta tempora possimus fuga <br> <br><span class="span__writer">By ABRAR . 12-Aug-2022</span> </div>
+        </div>
+        <div class="footer__mid__img__and__para">
+          <div class="footer__mid__post__img">
+            <img src="./image/news1.png" alt="">
+          </div>
+          <div class="footer__mid__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium rerum
+            soluta tempora possimus fuga<br> <br><span class="span__writer">By ABRAR . 12-Aug-2022</span> </div>
+        </div>
+        <div class="footer__mid__img__and__para">
+          <div class="footer__mid__post__img">
+            <img src="./image/news1.png" alt="">
+          </div>
+          <div class="footer__mid__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium rerum
+            soluta tempora possimus fuga <br> <br><span class="span__writer">By ABRAR . 12-Aug-2022</span> </div>
+        </div>
+
+      </div>
+      <div class="footer__right">
+        <div class="footer__right__heading">SUBSCRIBE</div>
+        <div class="footer__right__info">Get The BEst Viral Stories Straight Into your inbox!</div>
+       <div class="footer__right__input__button">
+        <input type="email" name="Email" id="" placeholder="your Email adress..."> <br>
+        <button>Subscribe</button>
       </div>
       </div>
 
     </section>
-    
   </div>
 
   <script>
